grid-template excercise w/ mondrian

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "./scss/intro";
 .css-exp {
-  @import "./scss/css-flex-grid";
+  @import "./scss/css-flex";
+  @import "./scss/css-grid";
 }
