--- a/src/scss/_css-flex.scss
+++ b/src/scss/_css-flex.scss
@@ -9,6 +9,11 @@ $gutter: 1px;
     margin-left: ($gutter / 2);
     margin-right: ($gutter / 2);
   }
+
+  .flex-col-#{$i} {
+    flex: 1 0 ($i / $columns * 100%);
+    // max-width: ($i / $columns * 100%);
+  }
 }
 
 .title,
@@ -26,8 +31,6 @@ h6 {
   flex-flow: row wrap;
   margin: auto;
   max-width: 100%;
-  justify-content: center;
-  align-items: center;
 }
 
 [class*="col-"] {
@@ -47,6 +50,4 @@ ul {
 }
 li {
   border: 1px solid #999;
-  margin: 0.5em;
-  padding: 0.5em;
 }
